kubernetes/app-manifest/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-cert
  namespace: website-portifolio
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: nginx-gateway
  to:
    - group: ""
      kind: Secret
      name: webport-cert
