kubernetes/app-manifest/gateway-rule.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: webport-route
  namespace: website-portifolio
spec:
  parentRefs:
    - name: gateway
      namespace: nginx-gateway
  hostnames:
    - dev.yohrannes.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: webport-svc
          port: 80
